# llm-council

./: .gitignore  AGENTIC_TRANSFORMATION_PLAN.md  INTEGRATION_COMPLETE.md  PHASE_4_IMPLEMENTATION_PLAN.md  PHASE_A_README.md  README.md  UI_PLAN.md  pyproject.toml  start-all.sh  start-backend.sh  start-frontend.sh  test_phase_a_e2e.py  test_single_agent.py
backend/: README.md  __init__.py  main.py  schemas.py
backend/database/: __init__.py  connection.py  crud.py  models.py
backend/routes/: history.py  research.py  stats.py
backend/services/: __init__.py  research.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/history/: page.tsx
frontend/app/research/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: command-palette.tsx  loading-skeleton.tsx
frontend/components/dashboard/: recent-activity.tsx  stats-cards.tsx
frontend/components/history/: history-filters.tsx  history-list.tsx  pagination.tsx
frontend/components/layout/: header.tsx  (+1 more)
frontend/lib/: sdk-client.ts  types.ts
src/: __init__.py
src/agents/: __init__.py  base_agent.py  deepseek_agent.py  gemini_agent.py  openai_agent.py
src/council/: __init__.py  aggregator.py  master_synthesizer.py  orchestrator.py
src/models/: __init__.py  schemas.py
src/utils/: __init__.py  output_manager.py
tests/: README.md  run_agent_tests.py  run_all_tests.py  test_council.py  test_deepseek_agent.py  test_gemini_agent.py  test_gemini_connection.py  test_master_synthesizer.py  test_openai_agent.py  test_openai_connection.py  tests_README.md
(+5 files in other folders)
