[project] #project section contains all the project metadata
name = "llm-council"
version = "0.1.0"
description = "Deep Research AI Council - Multi-model LLM collaboration system"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Shivang Singh", email = "ssnfs26@gmail.com" }
]

# Production Dependencies
dependencies = [
    # Core AI Model SDKs
    "openai",
    "google-genai",

    # Environment & Configuration
    "python-dotenv>=1.0.0",

    # Data Validation & Schemas
    "pydantic>=2.12.5",

    # Future Phase Dependencies (uncomment as needed)
    # "fastapi>=0.104.0",
    # "langchain>=0.3.0",
    # "langgraph>=0.2.0",
    # "tavily-python>=0.5.0",
    # "beautifulsoup4>=4.12.0",
    # "pandas>=2.0.0",
]

# Development Dependencies (testing, linting, formatting)
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",        # Fast linter & formatter
    "mypy>=1.8.0",        # Type checking
    "ipython>=8.12.0",    # Better REPL for testing
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# Tool configurations can also live here
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, tighten later